--- a/package.json
+++ b/package.json
@@ -31,7 +31,7 @@
       "xml2js": "0.2.8",
       "xmlbuilder": "0.4.2"
     },
-    "main": "lib/index.js",
+    "main": "index.js",
     "browser": "lib/browser.js",
     "browserify": { "transform": "./dist-tools/transform.js" },
     "engines": {
